--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
 }
 .links:hover {
     color: #2196F3;
+    cursor: pointer;
 }
 
 .web {
@@ -380,6 +381,11 @@
 
     color: rgba(255, 255, 255, 0.6);
     text-decoration: none;
+}
+
+.info :hover {
+    color: #2196F3;
+    cursor: pointer;
 }
 
 
